# fav-repos-index-architecture

./: .gitattributes  .gitignore  README.md  cabal.project  default.nix  fri-backend.cabal  fri.el  shell.nix
app/: Api.hs  FriApi.hs
backend/: fri-backend.cabal
backend/app/: Main.hs
backend/src/: Backend.hs
backend/src/GRPC/: Api.hs
backend/src/Protos/: Fri.hs
conf/: envoy.yaml
doc/: README.org  http-queries.md
doc/adr/: choice-of-packages-manager.md
javascript/: .gitignore  Prelude.res  bsconfig.json  package.json  pnpm-lock.yaml
javascript/src/: App.jsx  App.res  Index.res  WebApi.res  fri_grpc_web_pb.js  fri_pb.js
javascript/src/fri/: messages_pb.js  services_grpc_web_pb.js  services_pb.js
javascript/src/messages/: FriTypes.mli  MessagesBs.ml  MessagesBs.mli  MessagesTypes.ml  MessagesTypes.mli
javascript/www/: index.html
protos/: fri.proto
protos/fri/: messages.proto  services.proto
python/: client.py  fri_pb2.py  fri_pb2_grpc.py
python/fri/: messages_pb2.py  services_pb2.py  services_pb2_grpc.py
src/: Api.hs  FriGitHub.hs  Protos.hs  Query.hs  Types.hs
src/FRI/: Types.hs
src/Fri/: Api.hs  GitHub.hs  Messages.hs  Query.hs  RpcApi.hs  Services.hs  Types.hs
src/Protos/: Fri.hs
