cabal-version:       2.4
name:                fri-backend
version:             0.1.0.0
build-type:          Simple

common common-options
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010
  default-extensions:  DerivingStrategies OverloadedStrings

library
  import:              common-options
  build-depends:       base                       < 5
                     , aeson                      ^>=1.5
                     , bloodhound                 ^>= 0.17
                     , containers                 < 0.7
                     , exceptions                 ^>= 0.10
                     , deepseq                    < 1.5
                     , github                     ^>= 0.26
                     , grpc-haskell               >= 0.1.0
                     , http-client                ^>= 0.6
                     , proto3-suite               >= 0.4.2.0
                     , proto3-wire                >= 1.2.0
                     , relude                     > 1.0.0.0
                     , streaming                  ^>= 0.2
                     , vector                     < 0.13
  hs-source-dirs:      src
  exposed-modules:     Api
                       Types
                       Query
                       FriGitHub
  other-modules:       Protos
                     , Protos.Fri

executable fri-api
  import:              common-options
  build-depends:       base                       < 5
                     , fri-backend
                     , optparse-generic           < 1.5
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             FriApi.hs
