cabal-version:       2.4
name:                fri-backend
version:             0.1.0.0
build-type:          Simple

common common-options
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010
  default-extensions:  DerivingStrategies OverloadedStrings

library
  import:              common-options
  build-depends:       base                       < 5
  hs-source-dirs:      src
  exposed-modules:     Backend

executable fri-backend
  import:              common-options
  build-depends:       base                       < 5
                     , bloodhound                 >= 0.16.0.0
                     , fri-backend
                     , optparse-generic           < 1.5
                     -- TODO: push grpc to
                     , grpc-haskell
                     , relude                     > 1.0 && < 1.1
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
